# notes_to_blog

./: .cursorrules  .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: PRD.md  PROJECT_COMPLETION.md  TASKS.md  notes.md
images/: README.md
inbox/: README.md  gi.cmd a windows batch script to get a default .gi.md  sample_note.txt
logs/: rotation_test.log.1  rotation_test.log.2
output/: README.md  sample_blog_post.md
scripts/: deploy.sh  setup.ps1  setup.sh
src/: config.py  logger.py
src/agents/: __init__.py  base_agent.py  content_analyzer.py  content_writer.py  image_generator.py  metadata_generator.py  researcher.py
src/crews/: __init__.py  blog_post_crew.py
src/models/: __init__.py  blog_models.py  config_models.py
src/services/: __init__.py  brave_search_service.py  file_structure_service.py  input_processor.py  openrouter_service.py  output_generator.py  replicate_service.py  template_service.py
templates/: blog_post_template.md  frontmatter_template.md  image_prompt_templates.md
templates/agent_prompts/: content_analyzer.txt  content_writer.txt  image_generator.txt  metadata_generator.txt  researcher.txt
templates/crew_prompts/: blog_post_crew.txt
tests/: __init__.py  conftest.py  test_agents.py  test_blog_models.py  test_brave_search_service.py  test_config.py  test_error_handling.py  test_file_structure_service.py  test_integration.py  test_logger.py  test_models.py  test_openrouter_service.py  test_phase5.py  test_replicate_service.py  test_services.py  test_template_service.py
